styles.css
* {
    text-decoration: none;
    padding: 0;
    border: 0;
    margin: 0;
    box-sizing: border-box;
    font-family:     sans-serif;
}

body {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    justify-content: space-between;
    overflow-x: hidden;
    min-height: 100vh;
    min-width: 100vw;
}

a, a:visited {
    color: inherit;
    text-shadow: none;
}

a:hover, .icon:hover{
    filter: drop-shadow(1px 2px 1px rgba(208, 231, 210, 1));
    text-shadow: 1px 2px 1px rgba(208, 231, 210, 1);
    transition: 0.3s;
}

.bglight {
    background-color: rgba(208, 231, 210, 1);
}

.textlight {
    color: rgba(97, 130, 100, 1);
    fill: rgba(97, 130, 100, 1);
}

.borderlight {
    border-color: rgba(121, 172, 120, 1);
}

.shadowlight {
    box-shadow: 0px 0px 4px rgba(97, 130, 100, 0.5);
}


.sliderlight {
    background: rgba(92, 131, 116, 1);
}

.sliderlight::-webkit-slider-thumb {
    background: rgba(4, 13, 18, 1);
}
.bgdark {
    background-color: rgba(11, 27, 36, 1);
}

.textdark {
    color: rgba(147, 177, 166, 1);
    fill: rgba(147, 177, 166, 1);
}

.borderdark {
    border-color: rgba(147, 177, 166, 1);
}

.sliderdark {
    background: rgba(24, 61, 61, 1);
    
}

.sliderdark::-webkit-slider-thumb {
    background: rgba(147, 177, 166, 1);
}

.hflight {
    background-color: rgba(176, 217, 177, 1);
}

.hfdark {
    background-color: rgba(24, 61, 61, 1);
}

#header {
    padding: 4vh 0;
    min-height: 80px;
    flex: 0 1 fit-content;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    font-size: calc(2vw + 3vh);
    font-weight: 600;
}

#themeContainer, #headerFixer {
    width: calc(3vw + 5px);
    height: calc(3vw + 5px);
    min-width: 22px;
    min-height: 22px;
    font-size: calc(1vw + 1vh);
    display: flex;
    justify-content: center;
    align-items: center;   
}

#light, #dark {
    height: calc(2vw + 1vh);
    width: calc(2vw + 1vh);
    min-width: 20px;
    min-height: 20px;
    position: absolute;
}

#light {
    opacity: 0;
}

#main {
    flex: 1 0 auto;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

#container1 {
    width: 1200px;
    min-height: 600px;
    max-height: fit-content;
    display: flex;
    flex-flow: row wrap-reverse;
    justify-content: center;
    align-items: center;
    gap: 2vw;
}

#menu, #container1fixer {
    min-height: fit-content;
    flex: 0 1 inherit;
    min-width: 200px;
    width: 230px;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    align-items: center;
    gap: 10%;
}

#container1fixer {
    min-height: 0;        
}

.menuItem {
    flex: 0 1 fit-content;
    display: flex;
    flex-flow: column nowrap;
    justify-content: flex-start;
    margin: 10%;
    align-items: center;
    max-height: 15%;
    height: 150px;
    gap: 10px;  
}   

#colorPickerButton {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

#colorPicker, #colorFixer {
    height: 32px;
    width: 32px;
    background: none;
}

#colorPicker::-webkit-color-swatch-wrapper {
    padding: 0;
}
#colorPicker::-webkit-color-swatch {
    border: none;
    border-radius: 20%;
    box-shadow: 0px 1px 2px rgba(24, 61, 61, 1);
}

#gridSizeButton {
    display: none;
}

#gridLabel {
    font-weight: 600;
    font-size: 20px;
}

.slider {
    width: 200px;
    margin: 10px 0;
    appearance: none;
    height: 7px;
    border-radius: 5px;
    outline: none;
    opacity: 0.7;
    -webkit-transition: .2s;
    transition: opacity .2s;
}

.slider:hover {
    opacity: 1;
}

.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    cursor: pointer;
  }

/* #intensityDisplay {
    width: 60px;
} */

.menuButton {
    height: 40px;
    width: 180px;
    background: transparent;
    border-width: 4px;
    border-style: solid;
    border-radius: 7px;
    font-size: 20px;
    font-weight:600;
    transition: filter 0.5s;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.menuButton:hover, #colorDisplay:hover {
    filter: brightness(120%);
    transition: 0.15s;
}

.menuButton.buttonlight:active, #colorDisplay:active {
    background-color: rgba(121, 172, 120, 1);
    color: rgba(208, 231, 210, 1);
    filter: brightness(100%);
    transition: 0.15s;
}

.menuButton.buttondark:active, #colorDisplay:active {
    background-color: rgba(147, 177, 166, 1);
    color: rgba(11, 27, 36, 1);
    filter: brightness(100%);
    transition: 0.15s;
}


.menuButton.modeactivelight {
    background-color: rgba(120, 172, 119, 1);
    color: rgba(208, 231, 210, 1);
}

.menuButton.modeactivedark {
    background-color: rgba(147, 177, 166, 1);
    color: rgba(11, 27, 36, 1);
}

#sketchBoard {
    display: flex;
    flex-flow: column nowrap;
    width: 600px;
    aspect-ratio: 1 / 1;
    background-color: rgba(245, 245, 245, 1);
    min-width: 600px;
    cursor: url(./images/Colebemis-Feather-Pen-tool.png), url(./images/Colebemis-Feather-Pen-tool.svg), pointer;
    touch-action: none;
}

.gridRow {
    flex: 1 1 0;
    display: flex;
    flex-flow: row nowrap;
}

.gridItem {
    flex: 1 1 0;
    background-color: rgb(245, 245, 245);
}

#footer {
    min-height: 50px;
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    justify-content: center;
    align-items: center;
    font-weight: 500;
}

#copyRights {
    display: flex;
    flex-flow: row nowrap;
    gap: 5px;
    align-items: center;
    justify-content: center;
}

#contactLink {
    display: flex;
    flex-flow: row nowrap;
    gap: 5px;
    align-items: center;
    justify-content: center;
}

@media only screen and (max-width: 900px)
{
    body {
        width: 100vw;
        height: 100vh;
        min-height: max-content;
        min-width: max-content;
    }
    #colorPickerButton {
        overflow: hidden;
    }
    #colorPicker, #colorFixer {
        width: 27px;
        height: 27px;
    }
    #colorPicker::-webkit-color-swatch {
        border-radius: 50%;
    }
    #container1 {
        flex-flow: column nowrap;
        margin: 20px 50px;
    }    

    
    #menu {
        order: 1;
        flex-flow: row wrap;
        width: 100%;
        justify-content: center;
        align-items: flex-start;
        gap: 10px;
    }
    .menuItem {
        height: 80px;
        /* flex: 0 0 190px; */
        margin: 0;
        align-items: center;
        justify-content: flex-start;
    }

    /* .menuButton {
        width: 160px;
    } */
    #gridLabel {
        display: none;
    }
    #gridSizeButton {
        display: block;
        /* justify-content: center;
        align-items: center; */
    }
    .slider {
        width: 180px;
    }
    #gridContainer {
        order: 4;
        flex-direction: column-reverse;
    }
    /* #colorPicker {
        order: 1;
    } */
    #intensityContainer {
        order: 5;
        flex-direction: column-reverse;
    }
 
}

@media only screen and (max-width: 700px) {
    #sketchBoard {
        width: 400px;
        min-width: 400px;
    }
    .menuItem {
        height: 80px;
        justify-content: flex-start;
        align-items: center;
    }
}   

